use webpack, divide into modules

--- a/test/index.html
+++ b/test/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Test WsMock</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script type="module" src="../dist/wsmock.js"></script>
   <script type="module" src="./index.js"></script>
 </head>
 <body>
