--- a/test/index.html
+++ b/test/index.html
@@ -5,12 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Test WsMock</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script type="module" src="../dist/wsmock.js"></script>
-  <script type="module" src="./index.js"></script>
 </head>
 <body>
   <button id="open">Open WebSocket Connection</button>
   <button id="send">Send Message</button>
   <button id="close">Close WebSocket Connection</button>
+  <script src="../dist/wsmock.js"></script>
+  <script src="./settings.js"></script>
+  <script src="./index.js"></script>
 </body>
 </html>
