Change development server from http-server to webpack-dev-server

--- a/test/index.html
+++ b/test/index.html
@@ -10,7 +10,7 @@
   <button id="open">Open WebSocket Connection</button>
   <button id="send">Send Message</button>
   <button id="close">Close WebSocket Connection</button>
-  <script src="../dist/wsmock.js"></script>
+  <script src="../dev/wsmock.js"></script>
   <script src="./settings.js"></script>
   <script src="./index.js"></script>
 </body>
