Bug fix; Add test cases

--- a/test/index.html
+++ b/test/index.html
@@ -9,6 +9,7 @@
 <body>
   <button id="open">Open WebSocket Connection</button>
   <button id="send">Send Message</button>
+  <button id="change">Change OnMessage Event Listener</button>
   <button id="close">Close WebSocket Connection</button>
 </body>
 </html>
