Add RegExp support to mock url; Update readme.

--- a/test/index.html
+++ b/test/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+  <label><input id="regexp-checkbox" type="checkbox" />Test RegExp Url</label>
   <button id="open">Open WebSocket Connection</button>
   <button id="send">Send Message</button>
   <button id="change">Change OnMessage Event Listener</button>
